[package]
name = "autocfg"
version = "1.999999.999999"  # Hacked 1.x version that will never be published.
authors = ["Josh Stone <cuviper@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cuviper/autocfg"
description = "Automatic cfg for Rust compiler features"
readme = "README.md"
keywords = ["rustc", "build", "autoconf"]
categories = ["development-tools::build-utils"]
exclude = ["/.github/**", "/bors.toml"]

[dependencies]
